@@ -1,3 +1,5 @@
+* Ensure byName() works with disconnected nodes as context. [jddalton]
+
 * Fix regression in ID optimizers for selectors like `#foo.bar.baz`. [jddalton]
 
 * Make sure classNames resolve correctly for forms that have children with name="className". [jddalton, pdanpdan]
